# CopperCrab

./: Cargo.toml  LICENSE  README.md
.github/: CHANGELOG.tpl.md
.github/workflows/: release.yaml
gerber_test/pcb_simple_2/gcode/: isolation.nc  outline.nc
img/icons/svg/: coppercrab-48.svg~  coppercrab-96.svg~
locales/: app.yml
src/: dirs.rs  logger.rs  main.rs
src/core/: debug.rs  geometry.rs  mod.rs
src/core/parser/: excellon.rs  gerber.rs  mod.rs
src/core/toolpath/: helpers.rs  mod.rs
src/core/tools/: drill.rs  endmill.rs  library.rs  mod.rs  vbit.rs
src/ui/: app_config.rs  buttons.rs  canvas.rs  colors.rs  labels.rs  log_ui.rs  mod.rs  pcb_transform.rs  status_bar.rs  tool_library.rs
